--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.shweta</groupId>
 	<artifactId>climatecontrol_03</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>climatecontrol_03</name>
 	<description>Demo project for Spring Boot</description>
 
